<resources>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="flickr_showword">Flickr</string>
    <string name="flickr_no_client">未安装Flickr客户端</string>
    <string name="flickr_content">Flickr只支持图片分享</string>
    <string name="flickr_no_content">请设置分享内容</string>
    <string name="kakao_showword">Kakao Talk</string>
    <string name="kakao_no_client">未安装Kakao Talk客户端</string>
    <string name="kakao_content">Kakao Talk只支持图片、文本分享</string>
    <string name="kakao_no_content">请设置分享内容</string>
    <string name="umeng_socialize_text_laiwang_key">来往</string>
    <string name="umeng_socialize_text_laiwang_dynamic_key">来往动态</string>
    <string name="umeng_socialize_laiwang_default_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能</string>
    <string name="line_showword">LINE</string>
    <string name="line_no_client">未安装Line客户端</string>
    <string name="line_content">Line只支持文本，图片</string>
    <string name="line_no_content">请设置分享内容</string>
    <string name="linkedin_showword">LinkedIn</string>
    <string name="linkedin_no_client">未安装LinkedIn客户端</string>
    <string name="linkedin_content">linked只支持纯文本分享</string>
    <string name="pocket_showword">Pocket</string>
    <string name="pocket_no_client">未安装pocket客户端</string>
    <string name="pocket_content">pocket只支持网页链接分享</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中…</string>
    <string name="umeng_socialize_content_hint">说点啥…</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des" />
    <string name="umeng_socialize_share">分享</string>
    <string name="des_image">MINI OBDII</string>
    <string name="text_app_duty_declare">Accident may occur when using the mobile phone. To avoid it, please use it after stopping the car. The error code checking may not be accurate due to different car mode protocols, and please refer to professionals for details.</string>
    <string name="text_app_version">Software Version</string>
    <string name="text_app_develop">Development</string>
    <string name="text_app_develop_last">MINI OBDII</string>
    <string name="_upkeep_info_1">The maintenance covers:</string>
    <string name="_upkeep_info_2">Maintenance is so simply with one click. We will do all the job.</string>
    <string name="txt_str_sdk_version">engine version</string>
    <string name="txt_str_navcore_version">NAVCORE</string>
    <string name="text_app_weibo">官方微博</string>
    <string name="text_app_weibo_last">\@图吧Mapbar</string>
    <string name="text_app_bbs">客服QQ群</string>
    <string name="text_app_bbs_last">211366226</string>
    <string name="text_app_tel">客服电话</string>
    <string name="text_app_tel_last">4006616677</string>
    <string name="info">商品信息</string>
    <string name="txt_str_select_city">请选择省市区</string>
    <string name="txt_str_select_address">请输入收货人详细地址</string>
    <string name="txt_str_errorpage_introduce">亲,感谢您加入用户体检计划</string>
    <string name="txt_str_question">请简要描述您的问题</string>
    <string name="txt_str_submitinfo">提交信息</string>
    <string name="text_str_Warm_prompt">温馨提示：汽车卫士能完美适配在有obd2接口的车上，特别是07年之后的车型。</string>
    <string name="txt_str_address">邮寄地址</string>
    <string name="txt_str_consignee">请填写收货人</string>
    <string name="txt_str_phone">请填写手机号码</string>
    <string name="txt_str_pay_type">支付方式</string>
    <string name="txt_str_alipay">支付宝</string>
    <string name="txt_str_phone_bank">手机银联（不需要开通网银）</string>
    <string name="txt_str_gopay">去支付</string>
    <string name="txt_str_car_info">"发动机系统、变速箱系统、空调系统、冷却系统
燃油系统"</string>
    <string name="txt_str_correcting_upkeep">校正保养</string>
    <string name="label_submit_upkeepinfo_issues">The maintenance issue I want feedback</string>
    <string name="txt_str_not_setcar">"   Cannot set the car maintenance information"</string>
    <string name="txt_str_not_show_upkeepinfo">"   No display maintenance information"</string>
    <string name="txt_str_upkeepinfo_error">"   The time is not accurate maintenance mileage"</string>
    <string name="txt_str_upkeepinfo_error2">"   Maintenance project and the price is not accurate"</string>
    <string name="txt_str_upkeepinfo_error3">"   Other issues"</string>
    <string name="txt_str_upkeepinfo_prompt">Note: If the maintenance information is not accurate, please first check the mileage and maintenance data has been set, to ensure that the software gives you more accurate maintenance reminder.</string>
    <string name="carvin_content1">1. What is the vehicle identification number?</string>
    <string name="carvin_cotent2">Vehicles recognition code and called VIN, is car of ID,, it according to national vehicles management standard determine, contains has vehicles of production manufacturers, and era, and models, and body type type and the code, and engine code and the assembled locations, information. by 17 bit character composition, so commonly known as 17 bit code. right interpretation VIN code, on for right to diagnosis and maintenance are is is important of.</string>
    <string name="carvin_cotent3">2. where the vehicle identification number</string>
    <string name="carvin_cotent4">1.) vehicle front left corner of the windshield</string>
    <string name="carvin_cotent5">2.) vehicle</string>
    <string name="carvin_cotent6">3). vehicle nameplates</string>
    <string name="carvin_cotent7">4). policy</string>
    <string name="carvin_cotent8">5).Other location</string>
    <string name="carvin_cotent9">"• Right front door or pillar 
?Such large engine and chassis parts 
• On the left side of the wheel cover 
• On the steering column 
• Support 
 the radiator• In the front of the engine machining mat 
• Quality assurance and maintenance manuals, owner manual"</string>
    <string name="text_vin">Vehicle Identification Number</string>
    <string name="text_save">Save</string>
</resources>