<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff0f2f6" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:background="#fff0f2f6" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="#fff0f2f6" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:src="@drawable/line" android:contentDescription="@string/des_image" />
            <RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/img_car_vin" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_margin="10.0dip" android:src="@color/transparent" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/des_image" />
                <EditText android:textSize="15.0sp" android:textColor="@color/keynote_color" android:id="@id/et_vin" android:background="@drawable/login_bg" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="15.0dip" android:hint="17位数字或字母" android:maxLength="17" android:layout_toRightOf="@id/txt_vin" android:layout_centerInParent="true" style="@style/textAppearanceXXXLarge" />
                <TextView android:textColor="#ff000000" android:id="@id/txt_vin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:text="@string/text_vin" android:layout_centerVertical="true" style="@style/textAppearanceSMedium" />
            </RelativeLayout>
            <Button android:textSize="17.0sp" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/btn_save_vin" android:background="@drawable/btn_green" android:padding="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/text_save" />
            <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:text="@string/carvin_content1" />
            <TextView android:textSize="16.0sp" android:textColor="#ff4b5059" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/carvin_cotent2" />
            <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/carvin_cotent3" />
            <TextView android:textSize="16.0sp" android:textColor="#ff4b5059" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/carvin_cotent4" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/vin_icon1" android:contentDescription="@string/des_image" />
            <TextView android:textSize="16.0sp" android:textColor="#ff4b5059" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/carvin_cotent5" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/vin_icon2" android:contentDescription="@string/des_image" />
            <TextView android:textSize="16.0sp" android:textColor="#ff4b5059" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/carvin_cotent6" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/vin_icon3" android:contentDescription="@string/des_image" />
            <TextView android:textSize="16.0sp" android:textColor="#ff4b5059" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/carvin_cotent7" />
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/vin_icon4" android:contentDescription="@string/des_image" />
            <TextView android:textSize="16.0sp" android:textColor="#ff4b5059" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/carvin_cotent8" />
            <TextView android:textSize="16.0sp" android:textColor="#ff4b5059" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/carvin_cotent9" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>