<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff6f6f6" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_drive_analyse" android:background="#ffffffff" android:padding="10.0dip" android:paddingLeft="20.0dip" android:paddingTop="30.0dip" android:paddingBottom="30.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
        <TextView android:textColor="#ff8c8c8c" android:id="@id/verison" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/text_app_version" android:singleLine="true" android:layout_alignParentLeft="true" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/version_last" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:singleLine="true" android:layout_toRightOf="@id/verison" android:layout_alignTop="@id/verison" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/engine" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/txt_str_sdk_version" android:singleLine="true" android:layout_below="@id/verison" android:layout_alignParentLeft="true" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/engine_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:singleLine="true" android:layout_alignLeft="@id/version_last" android:layout_alignTop="@id/engine" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/navcore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/txt_str_navcore_version" android:singleLine="true" android:layout_below="@id/engine" android:layout_alignParentLeft="true" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/navcore_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:singleLine="true" android:layout_alignLeft="@id/version_last" android:layout_alignTop="@id/navcore" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/develop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/text_app_develop" android:singleLine="true" android:layout_below="@id/navcore" android:layout_alignParentLeft="true" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/develop_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_app_develop_last" android:layout_alignLeft="@id/version_last" android:layout_alignTop="@id/develop" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/weibo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/text_app_weibo" android:singleLine="true" android:layout_below="@id/develop_content" android:layout_alignParentLeft="true" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/weibo_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_app_weibo_last" android:singleLine="true" android:layout_toRightOf="@id/weibo" android:layout_alignTop="@id/weibo" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/bbs" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/text_app_bbs" android:singleLine="true" android:layout_below="@id/weibo" android:layout_alignParentLeft="true" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/bbs_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_app_bbs_last" android:singleLine="true" android:layout_toRightOf="@id/bbs" android:layout_alignLeft="@id/weibo_content" android:layout_alignTop="@id/bbs" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/tel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/text_app_tel" android:singleLine="true" android:layout_below="@id/bbs" android:layout_alignParentLeft="true" style="@style/textAppearanceMedium" />
        <TextView android:textColor="#ff8c8c8c" android:id="@id/tel_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_app_tel_last" android:singleLine="true" android:layout_toRightOf="@id/tel" android:layout_alignTop="@id/tel" style="@style/textAppearanceMedium" />
    </RelativeLayout>
    <TextView android:textColor="#ff9c9c9c" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/text_app_duty_declare" style="@style/textAppearanceSMedium" />
</LinearLayout>