<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#fff0f2f6" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="#ff555555" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.299988dip" android:layout_marginTop="20.0dip" android:text="@string/_upkeep_info_1" />
        <TextView android:textSize="13.299988sp" android:textColor="#ff555555" android:layout_width="wrap_content" android:layout_height="200.0dip" android:layout_marginLeft="13.299988dip" android:layout_marginTop="20.0dip" android:text="@string/txt_str_car_info" android:lineSpacingExtra="10.0dip" />
        <LinearLayout android:orientation="vertical" android:background="#fff0f2f6" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="#ffb1b4b9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="13.299988dip" android:layout_marginTop="20.0dip" android:text="@string/_upkeep_info_2" />
            <RelativeLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/text_gojiaozheng" android:background="@drawable/upkeep_info_yuan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/txt_str_correcting_upkeep" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>